# gooroom-integration-applet

./: Makefile.am  README  configure.ac
common/: Makefile.am  common.c  common.h  panel-glib.c  panel-glib.h
data/: Makefile.am  kr.gooroom.IntegrationApplet.panel-applet.in.in  style.css  style.scss
debian/: changelog  control  copyright  rules
icons/: Makefile.am
modules/: Makefile.am
modules/datetime/: Makefile.am  datetime-control-menu.ui  datetime-module.c  datetime-module.h  gooroom-calendar.c  gooroom-calendar.h  gresource.xml
modules/endsession/: Makefile.am  endsession-control.ui  endsession-module.c  endsession-module.h  gresource.xml
modules/nimf/: Makefile.am  gresource.xml  nimf-control.ui  nimf-gooroom.c  nimf-module.c  nimf-module.h
modules/power/: Makefile.am  power-module.c  power-module.h
modules/security/: Makefile.am  apps.gooroom-security-notify.gschema.xml  apps.gooroom-security-status.gschema.xml  gresource.xml  security-control-menu.ui  security-control.ui  security-module.c  security-module.h
modules/security/utils/: Makefile.am  utils.c  utils.h
modules/sound/: Makefile.am  pulseaudio-volume.c  pulseaudio-volume.h  sound-module.c  sound-module.h
modules/updater/: Makefile.am  gresource.xml  updater-control-menu.ui  updater-control.ui  updater-module.c  updater-module.h
modules/updater/utils/: Makefile.am  utils.c  utils.h
modules/user/: Makefile.am  gresource.xml  user-control.ui  user-module.c  user-module.h
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  gooroom-integration-applet.c  gooroom-integration-applet.h  gooroom-integration-module.c  gresource.xml  org.gnome.ScreenSaver.xml  popup-window.c  popup-window.h  popup-window.ui
